2001-08-07  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/barge.cc (Barge_object): Don't rotate ice raft.
	* objs/objs.cc: Much simpler ::get_rotated_frame().
	* usecode/ucsched.cc (Scheduled_usecode): Opcode 0x21 = 'nop'.

2001-08-07  Max Horn <max@quendi.de>
	* audio/Audio.h/.cc: added is_track_playing method; also fixed speech on MacOS
	  (my first speech bug fix was breaking the second, real fix)
	* audio/Midi.h: added is_track_playing method
	* bggame.cc: loads of changes, intro should be much better now, and better structured;
	  this is work in progess, not yet finished
	* exceptions.h: added UserBreakException
	* imagewin/imagebuf.cc/.h, ibuf8.cc/.h, ibu16.cc/.h: added fill_static method
	* game.cc: fixed wait_delay() to recognize very quick clicks (that measn very short
	  delay between mouse down and mouse up)
	* game.h: factored out BG_Game && SI_Game class declarations into new headers
	* added bggame.h, sigame.h
	* mac/*: added legal header to some files
	* sigame.cc; cleaned up intro code a little bit
	* various files: updated legal headers

2001-08-06  Max Horn <max@quendi.de>
	* audio/Audio.cc: fixed the fix for MacOS speech output

2001-08-06  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in, files/snprintf.cc, files/Makefile.am,
	files/utils.h: add an implementation of snprintf for OSs
	which don't provide one (Irix???)
	* mapedit/Makefile.studio.mingw: updates from Kirben

2001-08-06  Max Horn <max@quendi.de>
	* exult_constants.h: added FORGET_OBJECT and FORGET_ARRAY

2001-08-06  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc,actors.cc: Readied/unreadied Usecode is now called at
	end of drag.  (Unreadied is also still called in Actor::remove()).

	* usecode/intrinsics.cc: Don't close gumps if dragging something.

	* objs/objs.cc: Modified ::lt() so buttons on pillars show up in
	Test of Purity.

2001-08-06  Max Horn <max@quendi.de>
	* gumps/Gump_manager.cc/.h: added find_gump based on owner/shapenum